--- a/frontend/html/polledit.html
+++ b/frontend/html/polledit.html
@@ -30,13 +30,40 @@
     <!---------->
 
     <!--Editor de informações-->
-    <div class="container mt-36 border bg-light shadow-sm rounded">
+    <div class="container mt-36 border bg-light shadow-sm rounded mb-5">
         <div class="row justify-content-center">
             <!---Header--->
             <div class="col-12 bg-primary w-100 mb-4">
                 <h4 class="pt-2 text-white font-weight-semibold text-center">Informações gerais</h4>
             </div>
             <!------------>
+            
+            <!--Informações principais-->
+            <div class="col-10 w-100 border bg-white rouded shadow-sm py-3 mb-4">
+                <div class="container pb-2">
+                    <div class="row align-items-center">
+                        <div class="col-3 text-center mb-3">
+                            <span class="font-weight-semibold text-primary">Título</span>
+                        </div>
+                        <div class="col-9 mb-3">
+                            <input type="text" class="form-control border-0 rounded-pill" placeholder="Insira um título"/>
+                        </div>
+                        <div class="col-3 text-center mb-3">
+                            <span class="font-weight-semibold text-primary">Descrição</span>
+                        </div>
+                        <div class="col-9 mb-3">
+                            <input type="text" class="form-control border-0 rounded-pill" placeholder="Insira uma descrição"/>
+                        </div>
+                        <div class="col-3 text-center">
+                            <span class="font-weight-semibold text-primary">Data de encerramento</span>
+                        </div>
+                        <div class="col-9">
+                            <input type="date" class="form-control border-0 rounded-pill" placeholder="Insira uma descrição"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-------------------------->
 
             <!--Participantes-->
             <div class="col-10 w-100 border bg-white rounded shadow-sm py-3 mb-4">
@@ -51,12 +78,15 @@
                     <!--Dados do usuário-->
                     <div class="container">
                         <div class="row">
-                            <div class="col-10 text-truncate my-2">
+                            <div class="col-9 text-truncate my-2">
                                 <i class="fas fa-user mr-2"></i>
                                 <span>Nome do usuário</span>
                             </div>
-                            <div class="col-2">
-                                <span class="text-danger">Pendente</span>
+                            <div class="col-2 my-auto">
+                                <span class="text-danger font-weight-semibold">Pendente</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
                             </div>
                         </div>
                     </div>
@@ -65,12 +95,15 @@
                     <!--Dados do usuário-->
                     <div class="container">
                         <div class="row">
-                            <div class="col-10 text-truncate my-2">
+                            <div class="col-9 text-truncate my-2">
                                 <i class="fas fa-user mr-2"></i>
                                 <span>Nome do usuário</span>
                             </div>
-                            <div class="col-2">
-                                <span class="text-success">Votou</span>
+                            <div class="col-2 my-auto">
+                                <span class="text-success font-weight-semibold">Votou</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
                             </div>
                         </div>
                     </div>
@@ -79,12 +112,15 @@
                     <!--Dados do usuário-->
                     <div class="container">
                         <div class="row">
-                            <div class="col-10 text-truncate my-2">
+                            <div class="col-9 text-truncate my-2">
                                 <i class="fas fa-user mr-2"></i>
                                 <span>Nome do usuário</span>
                             </div>
-                            <div class="col-2">
-                                <span class="text-success">Votou</span>
+                            <div class="col-2 my-auto">
+                                <span class="text-success font-weight-semibold">Votou</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
                             </div>
                         </div>
                     </div>
@@ -93,12 +129,15 @@
                     <!--Dados do usuário-->
                     <div class="container">
                         <div class="row">
-                            <div class="col-10 text-truncate my-2">
+                            <div class="col-9    text-truncate my-2">
                                 <i class="fas fa-user mr-2"></i>
                                 <span>Nome do usuário</span>
                             </div>
-                            <div class="col-2">
-                                <span class="text-success">Votou</span>
+                            <div class="col-2 my-auto">
+                                <span class="text-success font-weight-semibold">Votou</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
                             </div>
                         </div>
                     </div>
@@ -117,6 +156,101 @@
                 <!-------------------------->
             </div>
             <!----------------->
+
+            <!----Opções---->
+            <div class="col-10 w-100 border bg-white rounded shadow-sm py-3 mb-4">
+                <div class="text-center pb-2">
+                    <span class="font-weight-semibold text-primary">Opções</span>
+                </div>
+                <div>
+
+                </div>
+                <!--Lista das opções-->
+                <div>
+                    <!--Dados da opção-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-chart-pie mr-2"></i>
+                                <span>Opção 1</span>
+                            </div>
+                            <div class="col-2 my-auto">
+                                <span class="font-weight-semibold">0%</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+
+                    <!--Dados da opção-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-chart-pie mr-2"></i>
+                                <span>Opção 2</span>
+                            </div>
+                            <div class="col-2 my-auto">
+                                <span class="font-weight-semibold">0%</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+
+                    <!--Dados da opção-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-chart-pie mr-2"></i>
+                                <span>Opção 3</span>
+                            </div>
+                            <div class="col-2 my-auto">
+                                <span class="font-weight-semibold">0%</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+
+                    <!--Dados da opção-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-chart-pie mr-2"></i>
+                                <span>Opção 4</span>
+                            </div>
+                            <div class="col-2 my-auto">
+                                <span class="font-weight-semibold">0%</span>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>  
+                        </div>
+                    </div>
+                    <!-------------------->
+                </div>
+                <!---------------------->
+
+                <!--Adicionar opção-->
+                <div class="text-center">
+                    <span class="text-primary font-weight-semibold">Adicionar opção</span>
+                    <div class="mx-auto d-flex w-75 my-3">
+                        <input type="text" class="rounded-l-pill form-control" placeholder="Nome da opção" style="width: 85%;"/>
+                        <button type="submit" class="bg-primary btn rounded-r-pill" style="width: 15%;"><i class="fas fa-chart-pie text-white"></i></button>
+                    </div>
+                </div>
+                <!-------------------------->
+            </div>
+            <!-------------->
+        </div>
+        <div class="text-center mb-3">
+            <button type="submit" class="btn border-0 btn-primary rounded-pill px-5 py-2 font-weight-semibold">Salvar</button>
         </div>
     </div>
     <!------------------------->
