Add: Poll template

--- a/frontend/html/polledit.html
+++ b/frontend/html/polledit.html
@@ -65,6 +65,88 @@
             </div>
             <!-------------------------->
 
+            <!--Administradores-->
+            <div class="col-10 w-100 border bg-white rounded shadow-sm py-3 mb-4">
+                <div class="text-center pb-2">
+                    <span class="font-weight-semibold text-primary">Administradores</span>
+                </div>
+            
+                <!--Lista dos administradores-->
+                <div>
+                    <!--Dados do usuário-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-key mr-2"></i>
+                                <span>Nome do usuário</span>
+                            </div>
+                            <div class="col-2 my-auto"></div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+
+                    <!--Dados do usuário-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-key mr-2"></i>
+                                <span>Nome do usuário</span>
+                            </div>
+                            <div class="col-2 my-auto"></div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+
+                    <!--Dados do usuário-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-key mr-2"></i>
+                                <span>Nome do usuário</span>
+                            </div>
+                            <div class="col-2 my-auto"></div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+
+                    <!--Dados do usuário-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-9 text-truncate my-2">
+                                <i class="fas fa-key mr-2"></i>
+                                <span>Nome do usuário</span>
+                            </div>
+                            <div class="col-2 my-auto"></div>
+                            <div class="col-1 text-center">
+                                <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------->
+                </div>
+                <!---------------------->
+
+                <!--Adicionar administrador-->
+                <div class="text-center">
+                    <span class="text-primary font-weight-semibold">Adicionar administrador</span>
+                    <div class="mx-auto d-flex w-75 my-3">
+                        <input type="text" class="rounded-l-pill form-control" placeholder="Nome do usuário" style="width: 85%;"/>
+                        <button type="submit" class="bg-primary btn rounded-r-pill" style="width: 15%;"><i class="fas fa-user-plus text-white"></i></button>
+                    </div>
+                </div>
+                <!-------------------------->
+            </div>
+            <!----------------->
+
             <!--Participantes-->
             <div class="col-10 w-100 border bg-white rounded shadow-sm py-3 mb-4">
                 <div class="text-center pb-2">
@@ -175,7 +257,7 @@
                                 <span>Opção 1</span>
                             </div>
                             <div class="col-2 my-auto">
-                                <span class="font-weight-semibold">0%</span>
+                                <span>0%</span>
                             </div>
                             <div class="col-1 text-center">
                                 <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
@@ -192,7 +274,7 @@
                                 <span>Opção 2</span>
                             </div>
                             <div class="col-2 my-auto">
-                                <span class="font-weight-semibold">0%</span>
+                                <span>0%</span>
                             </div>
                             <div class="col-1 text-center">
                                 <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
@@ -209,7 +291,7 @@
                                 <span>Opção 3</span>
                             </div>
                             <div class="col-2 my-auto">
-                                <span class="font-weight-semibold">0%</span>
+                                <span>0%</span>
                             </div>
                             <div class="col-1 text-center">
                                 <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
@@ -226,7 +308,7 @@
                                 <span>Opção 4</span>
                             </div>
                             <div class="col-2 my-auto">
-                                <span class="font-weight-semibold">0%</span>
+                                <span>0%</span>
                             </div>
                             <div class="col-1 text-center">
                                 <button type="button" class="btn"><i class="fas fa-trash hover-primary"></i></button>
