Poll template updated

--- a/frontend/html/poll.html
+++ b/frontend/html/poll.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/all.min.css">
     <title>Informações da votação</title>
 </head>
-<body class="nunito">
+<body class="nunito bg-light">
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 sticky">
         <a class="navbar-brand ml-2" href="#">pollex</a>
@@ -29,22 +29,111 @@
     </nav>
     <!---------->
 
-    <!--Editor de informações-->
     <div class="container-fluid mt-36 mb-5">
+        <!---Card box--->
         <div class="row justify-content-around">
-            <div class="col-3 border border-l-primary shadow-sm py-3">
-                <h4 class="text-primary" style="font-size: large;">Situação</h4>
-                <span style="font-size: x-large;">Pendente</span>
+            <!----Situação---->
+            <div class="my-2 col-9 col-md-3 d-flex border-lg bg-white border-l-primary shadow-sm py-3">
+                <div>
+                    <h4 class="text-primary" style="font-size: large;">Situação</h4>
+                    <span style="font-size: x-large;">Pendente</span>
+                </div>
+                <div class="my-auto ml-auto">
+                    <i class="fas fa-3x fa-user-check text-light-gray"></i>
+                </div>
             </div>
-            <div class="col-3 border border-l-success shadow-sm pt-3">
-                <h4 class="text-success" style="font-size: large;">Participantes</h4>
-                <span style="font-size: x-large;">2019</span>
+            <!---------------->
+
+            <!--Número de participantes-->
+            <div class="my-2 col-9 col-md-3 d-flex border-lg bg-white border-l-success shadow-sm py-3">
+                <div>
+                    <h4 class="text-success" style="font-size: large;">Participantes</h4>
+                    <span style="font-size: x-large;">2019</span>
+                </div>
+                <div class="my-auto ml-auto">
+                    <i class="fas fa-3x fa-users text-light-gray"></i>
+                </div>
             </div>
-            <div class="col-3 border border-l-danger shadow-sm pt-3">
-                <h4 class="text-danger" style="font-size: large;">Encerramento</h4>
-                <span style="font-size: x-large;">31/12/2019</span>
+            <!--------------------------->
+
+            <!---Data de encerramento--->
+            <div class="my-2 col-9 col-md-3 d-flex border-lg bg-white border-l-danger shadow-sm py-3">
+                <div>
+                    <h4 class="text-danger" style="font-size: large;">Encerra em</h4>
+                    <span style="font-size: x-large;">31/12/2019</span>
+                </div>
+                <div class="my-auto ml-auto">
+                    <i class="fas fa-3x fa-calendar-times text-light-gray"></i>
+                </div>
             </div>
+            <!-------------------------->
         </div>
+        <!-------------->
+
+        <!--Informações da votação-->
+        <div class="row justify-content-around mt-5">
+            <!--Opções de voto e outras informações-->
+            <div class="col-9 bg-white col-md-6 border-lg border-t-light-gray shadow-sm mb-5">
+                <div class="my-4 ml-2">
+                    <h3 class="text-primary">Título da votação</h3>
+                    <span>Descrição do tema da votação e outros comentários</span>
+                </div>
+                <div class="ml-2">
+                    <span class="text-primary">Opções de voto</span>
+                    <!----Escolhas---->
+                    <div>
+                        <!----Opção---->
+                        <div class="my-3">
+                            <input type="checkbox" class=""/>
+                            <span class="pl-2">Opção 1</span>
+                        </div>
+                        <!------------->
+
+                        <!----Opção---->
+                        <div class="my-3">
+                            <input type="checkbox" class=""/>
+                            <span class="pl-2">Opção 2</span>
+                        </div>
+                        <!------------->
+
+                        <!----Opção---->
+                        <div class="my-3">
+                            <input type="checkbox" class=""/>
+                            <span class="pl-2">Opção 3</span>
+                        </div>
+                        <!------------->
+
+                        <!----Opção---->
+                        <div class="my-3">
+                            <input type="checkbox" class=""/>
+                            <span class="pl-2">Opção 4</span>
+                        </div>
+                        <!------------->
+
+                        <!----Opção---->
+                        <div class="my-3">
+                            <input type="checkbox" class=""/>
+                            <span class="pl-2">Opção 5</span>
+                        </div>
+                        <!------------->
+                    </div>
+                    <!---------------->
+                </div>
+                <div class="text-center my-4">
+                    <button type="button" class="btn rounded-pill mx-3 my-1 btn-primary font-weight-semibold">Confirmar voto</button>
+                </div>
+            </div>
+            <!--------------------------------------->
+
+            <!--Dados da votação-->
+            <div class="col-9 bg-white col-md-4 border-lg border-t-light-gray shadow-sm mb-5">
+                <div class="my-4 ml-2">
+                    <h3 class="text-primary mb-3">Resultados gerais</h3>
+                </div>
+            </div>
+            <!-------------------->
+        </div>
+        <!-------------------------->
     </div>
 </body>
 </html>
